--- a/hw2/index.html
+++ b/hw2/index.html
@@ -303,22 +303,22 @@
       <table style="width:100%">
         <tr align="center">
           <td>
-            <img src="results/Part6/Torus_BeforeLS" align="middle" width="400px"/>
+            <img src="results/Part6/TorusBeforeLS.png" align="middle" width="400px"/>
             <figcaption>Torus.dae before loop subdivision</figcaption>
           </td>
           <td>
-            <img src="results/Part6/Torus_AfterLS" align="middle" width="400px"/>
+            <img src="results/Part6/TorusAfterLS.png" align="middle" width="400px"/>
             <figcaption>Torus.dae before loop subdivision</figcaption>
           </td>
         </tr>
         <br>
         <tr align="center">
           <td>
-            <img src="results/Part6/Torus_EdgeSplit" align="middle" width="400px"/>
+            <img src="results/Part6/Torus_EdgeSplit.png" align="middle" width="400px"/>
             <figcaption>Torus.dae with pre-split edge</figcaption>
           </td>
           <td>
-            <img src="results/Part6/Torus_AfterEdgeSplit" align="middle" width="400px"/>
+            <img src="results/Part6/Torus_AfterEdgeSplit.png" align="middle" width="400px"/>
             <figcaption>Torus.dae after loop subdivision with pre-split edge</figcaption>
           </td>
         </tr>
@@ -360,11 +360,11 @@
         <br>
         <tr align="center">
           <td>
-            <img src="results/Part6/Cube_RandomEdgeSplits" align="middle" width="400px"/>
+            <img src="results/Part6/Cube_RandomEdgeSplits.png" align="middle" width="400px"/>
             <figcaption>Input cube with random edge splits</figcaption>
           </td>
           <td>
-            <img src="results/Part6/Cube_AfterRandomEdgeSplits" align="middle" width="400px"/>
+            <img src="results/Part6/Cube_AfterRandomEdgeSplits.png" align="middle" width="400px"/>
             <figcaption>Input cube with random edge splits after loop subdivision</figcaption>
           </td>
         </tr>
